--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native-router-redux": "^0.2.2",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "rn-viewpager": "^1.1.3"
   }
 }
